--- a/.hgignore
+++ b/.hgignore
@@ -1,1 +1,31 @@
-xpure/cli/docker/.hgignore
+syntax: glob
+*.elc
+*.orig
+*.pyc
+*~
+*.swo
+*.swp
+*.bak
+.svn
+.build
+nohup.out
+*.map
+
+xpure
+.ssh
+.local
+.ipython
+.fis-pure-tmp
+down
+.vim
+
+.bash_history
+.bash_logout
+.cache/motd.legal-displayed
+.cnpmrc
+.hgignore
+.pip/pip.log
+.profile
+.cache
+.vim_mru_files
+.viminfo
